--- a/README
+++ b/README
@@ -1,1 +1,25 @@
+# Awesome
 
+This is a curated listing of all must-read resources for the builders of Proudcloud.
+
+To add a link, add an item on top (newest first).
+
+## Design
+
+- [Aaron Draplin on Logo Design](https://vimeo.com/113751583) (vimeo.com)
+
+## Design books
+
+- [In Progress](http://www.amazon.com/Progress-Lettering-Artists-Sketchbook-Process-ebook/dp/B00WYJCIB4/ref=sr_1_1?s=books&ie=UTF8&qid=1431501090&sr=1-1&keywords=in+progress+jessica+hische) by Jessica Hische
+
+## JavaScript
+
+- tbd
+
+## Ruby
+
+- tbd
+
+## Miscellaneous
+
+- tbd
