i18n: adds citations to the Rails guides

--- a/practices/i18n.md
+++ b/practices/i18n.md
@@ -30,6 +30,8 @@ Place your page's strings under their respective `controller` and `action` names
 t('.title')
 ```
 
+> See: [lazy lookup](http://guides.rubyonrails.org/i18n.html#lazy-lookup) (guides.rubyonrails.org)
+
 ### Group strings for partials
 The same concept should apply for partials. You can also use the `t('.login')` shortcut inside partial views.
 
@@ -78,7 +80,9 @@ en:
 ```
 
 ### Familiarize yourself with defaults
-The default locale file is available under rails-i18n. [Read it](https://github.com/svenfuchs/rails-i18n/blob/master/rails/locale/en.yml).
+The default locale file is available under rails-i18n.
+
+> See: [locale/en.yml](https://github.com/svenfuchs/rails-i18n/blob/master/rails/locale/en.yml). (svenfuchs/rails-i18n)
   
 
 <br>
@@ -116,6 +120,8 @@ en:
       short: "%b %d"      # Jun 25
 ```
 
+> See: [Adding date time formats](http://guides.rubyonrails.org/i18n.html#adding-date-time-formats) (guides.rubyonrails.org)
+
 <br>
 
 ## Forms
@@ -137,6 +143,8 @@ activerecord.errors.messages.[error]
 errors.attributes.[attribute_name].[error]
 errors.messages.[error]
 ```
+
+> See: [Translations for the error_messages_for helper](http://guides.rubyonrails.org/i18n.html#translations-for-the-active-record-error-messages-for-helper) (guides.rubyonrails.org)
 
 ### Use form labels
 There are also conventions on where [f.label](http://devdocs.io/rails/actionview/helpers/formbuilder#method-i-label) will look up labels.
